--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     color: white;
     border: 1px solid white;
     padding: 20px;
+    max-width: 900px;
+    margin: 16px auto;
 }
 
 a {
@@ -12,12 +14,23 @@ a {
 img {
     height: 300px;
     width: auto;
+    padding:16px;
+    margin: auto;
+    display: block;
+    border: 2px solid white;
 }
 
 h1, h2 {
     font-family:'Georgia', 'Garamond', 'serif';
+    text-align: center;
 }
 
 p, li {
     font-family:Verdana, Tahoma, sans-serif;
+}
+
+.description-container {
+    border: 1px solid white;
+    padding: 8px;
+    background-color: rgb(46, 46, 46);
 }
